--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -1,10 +1,28 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>hello</title>
+	<meta charset ="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Solution-2</title>
+	<link rel="stylesheet"  href="css/style.css">
 </head>
 <body>
-	<h1>hello</h1>
+	<h1>Our Menu</h1>
+		<div class = "col-lg-4 col-md-6  col-sm-12">
+			<div class="Chicken">Chicken</div>
+			<p>Chicken tossed in your choice of buffalo sauce, provolone cheese, served with a side of either ranch or bleu cheese dressing.</p>
+		</div>
+		<div class = "col-lg-4 col-md-6  col-sm-12">
+			<div class="Beef">Beef</div>
+			<p> We took our famous roast beef, topped it with Cheddar cheese sauce and zesty Red Ranch and served it on a toasted onion roll. And then we said "I told you so."</p>
+		</div>
+		<div class = "col-lg-4 col-md-12 col-sm-12">
+			<div class="Sushi">Sushi</div>
+			<p>Soft shell crab tempura, avocado and cucumber topped with tempura flakes, eel sauce and wasabi cream  Soft shell crab tempura, avocado  </p>
+		</div>
+	</div>
+
+
 </body>
 
 </html>
